# vehicle-insurance-risk-prediction-mlops

./: .gitignore  CITATION.cff  LICENSE  README.md  project-guide-line.md  pyproject.toml
assets/meta/: README.md
assets/outputs/: demo-output-of-data-validation-report.yaml
config/: schema.yaml
notebooks/: 01-data-understadning.ipynb  exoport-mongodb.ipynb
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: _init__.py  constants.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: training_pipeline.py
src/utils/: main_utils.py
tests/: debug_constants.py  test_imports.py  test_logger.py  test_training_pipeline.py  test_yaml_main_utils.py
tests/utils-config-tests/: test_excption.py  test_yaml_schema.py
