[project]
name = "vehicle-insurance-risk-prediction-mlops"
version = "0.1.0"
description = "A production grade MLOP's Project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.4.0",
    "certifi>=2026.2.25",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "pydeps>=3.0.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
